# Cbot_Autodistill

./: .gitignore  README_ANNOTATION_TOOL.md  README_COMPLETE.md  advanced_annotation_tool.py  advanced_annotation_tool_modular.py  annotation_tool.py  classes.yaml  crear_dataset.ipynb  gradio_annotation_tool.py  label.ipynb  labeler.py  main.py  pyproject.toml  requirements.txt  requirements_annotation_tool.txt  requirements_gradio.txt  requirements_modular.txt
utils/: __init__.py  annotation_manager.py  callback_manager.py  config_loader.py  coordinate_converter.py  figure_generator.py  undo_manager.py
